deployment/login-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: login-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: login-backend
  template:
    metadata:
      labels:
        app: login-backend
    spec:
      containers:
      - name: login-backend
        image: bounajia/login:tagname
        ports:
        - containerPort: 8084
---
apiVersion: v1
kind: Service
metadata:
  name: login-service
spec:
  selector:
    app: login-backend
  ports:
    - protocol: TCP
      port: 8084
      targetPort: 8084
