deployment/search-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: search
  template:
    metadata:
      labels:
        app: search
    spec:
      containers:
      - name: search-container
        image: bounajia/search:latest
        ports:
        - containerPort: 8066
---
apiVersion: v1
kind: Service
metadata:
  name: search-service
spec:
  selector:
    app: search
  ports:
  - protocol: TCP
    port: 8066
    targetPort: 8066
